# catalyst-code-agent-cache

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADAPTER_DESIGN.md
examples/: basic.py
src/catalyst_code_agent_cache/: __init__.py  cli.py  core.py  license.py
tests/: test_core.py
